add swagger on auth
